--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwind-scrollbar-hide": "^4.0.0"
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
